biscuit-terminal/lib/src/components/horizontal_rule/snapshots/biscuit_terminal__components__horizontal_rule__tests__browser_line_circle_medium.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
<svg class="darkmatter-hr" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto; --hr-weight: 4; --hr-color: currentColor; --hr-width: 100%;">
  <line x1="0" y1="50%" x2="45%" y2="50%" stroke="var(--hr-color, currentColor)" stroke-width="var(--hr-weight, 4)" stroke-linecap="round"/>
  <circle cx="50%" cy="50%" r="8" fill="none" stroke="var(--hr-color, currentColor)" stroke-width="var(--hr-weight, 4)"/>
  <line x1="55%" y1="50%" x2="100%" y2="50%" stroke="var(--hr-color, currentColor)" stroke-width="var(--hr-weight, 4)" stroke-linecap="round"/>
</svg>
