biscuit-terminal/lib/src/components/horizontal_rule/snapshots/biscuit_terminal__components__horizontal_rule__tests__terminal_ascii_dots.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
................................................................................
